--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="manifest" href="/browser/site.webmanifest" />
+    <link rel="icon" type="image/svg+xml" href="/browser/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta name="msapplication-TileColor" content="#000000" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Mega cool auth test"
+    />
+    <title>Auth Test</title>
   </head>
   <body>
     <div id="root"></div>
