--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="manifest" href="/browser/site.webmanifest" />
     <link rel="icon" type="image/svg+xml" href="/browser/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="msapplication-TileColor" content="#000000" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="theme-color" content="#ffffff" />
     <meta name="description" content="Mega cool auth test" />
     <title>Auth Test</title>
     <!-- Real Favicon Generator   -->
